--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,4 +14,8 @@ spring:
       enabled: true
       path: /h2-console
       
+springdoc:
+  swagger-ui:
+    path: /public/swagger      
+      
 
